--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,8 @@
-
+body {
+    background: aquamarine;
+    font-family: Arial, Helvetica, sans-serif;
+}
+h1 {
+    color: purple;
+    text-align: center;
+}   
